--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -42,7 +42,7 @@
 .footer .secContent {
   width: 100%;
   height: max-content;
-  padding: 2reminitial;
+  padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
